--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul class="menu" id="main-menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li class="submenu">
-                        <button class="submenu-button">Tiaenda</button>
+                        <button class="submenu-button">Tienda</button>
                         <div class="submenu-content">
                             <a href="php/coleccionlilit.html">Colección Lilit</a>
                             <a href="php/anillos.html">Anillos</a>
